--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "type": "git",
     "url": "git+https://github.com/LuthiGasparetto/intro-javascript-pami-b.git"
   },
-  "keywords": ["revisão","java-script"],
+  "keywords": [
+    "revisão",
+    "java-script"
+  ],
   "author": "Luis Otavio Audacio Gasparetto",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/LuthiGasparetto/intro-javascript-pami-b/issues"
   },
-  "homepage": "https://github.com/LuthiGasparetto/intro-javascript-pami-b#readme"
+  "homepage": "https://github.com/LuthiGasparetto/intro-javascript-pami-b#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
